Style: Use mixins to invert color, fix whitespace.

--- a/src/app/about/namecard/namecard.component.scss
+++ b/src/app/about/namecard/namecard.component.scss
@@ -34,8 +34,7 @@ $description-font-size: clamp(1em, 2vw, 1.5em);
 		& > .content-text {
 			& > .name {
 				margin-bottom: 0.5em;
-				padding-right: 0.7em;
-				padding-left: 0.7em;
+				padding-inline: 0.7em;
 				background-color: map.get($theme, "canvas", "hex");
 				color: map.get($theme, "foreground", "hex");
 				font-size: $name-font-size;
